+ Added a "game you do own" filter to friend's all games page
+ Added "Report Bug / Suggest Feature" to Enhanced Steam menu
+ Added reset options button to options page, instantly resetting all options to default
: Restyle options page
: Restyle greenlight banner and add to software, concept and collection items.
: Fix bug with options link within Enhanced Steam menu

v5.0
-----
+ Redesigned the navigation on the options page
+ Adds SteamCharts.com information on game pages
+ Adds "total playtime" to the all games page
+ Adds a "games you don't own" filter to friend's all games pages
+ Added platform icons to items on the wishlist page
+ Added active listing total to marketplace homepage
+ Added WSGF certifications for 21:9 (Ultra-Widescreen) and 4K UHD certified games
+ Added support for IndieGameStand price histories
+ Added support for showing booster pack market prices in your inventory
: Made a ton of behind-the-scenes bugfixes and code updates
: Fixed bug where card drops were calculating incorrectly for some users
: Fixed a bug where sales on packs were not correctly highlighting
: Fixed a bug that caused inventory links to become stale after selling an item
: Fixed bug where badge binder view wasn't working correctly in some languages

v4.9.1
-----
: Fixed a bug where long app names and tags were breaking layout on some pages
: Fixed a bug where some language codes were being interpreted incorrectly

v4.9
-----
+ Non-sale games are now hidden from the "Specials" search
+ Added option to display PCGamingWiki links on store pages
+ Added ability to sort "All Games" list by install size if logged in
+ Added filter to "All Games" list for installed/not installed if logged in
+ Added pricing history and formatting support for BRL (thanks drizzle!)
+ Added Polish translation by mrmahon
+ Profile links now display on private profiles
: The formatting of tags has changed from square to rounded